tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__SuperFuelAtTheTo-AAAAAAAAAAAAAAAAAAAL0Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3025,
  "prerequisites": [
    3023
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I was kidding, there's one more step in Oil, but it isn't really a better fuel, it's just the Tungstensteel Boiler.\n\nThis multi operates in the same fashion as the Titanium one. It needs a Super Fuel, it produces Superheated Steam and it makes you build a bunch of Steam Turbines to actually get power out of the fuel it consumes. The output energy of a single one of these boilers, at 100% efficiency, is 16k EU/t, so you'll need many turbines per boiler. You can build them like that, if you wish to, but at this point the Loose mode on those turbines is really useful. The efficiency hit is big, yes, but the Tungstensteel Boiler is 300% as efficient as the Bronze one, and a single Magic Solid Super Fuel burns for 4,5M EU at 100% turbine efficiency. Look at the amount of CBD you need to make one super fuel, and then you can decide if you want to tackle this super finale.\n\nYes, it's the end, basically. There are a couple of things you can still do, but I'll give you this as an award for having pushed through essentially all the Oil content in the pack. It has been a long journey, and I hope that you found it worthwhile and enjoyable.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Super Fuel At The Top",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3023
  ],
  "rewards": [],
  "tasks": []
}
