tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__Tetranitromethan-AAAAAAAAAAAAAAAAAAALwA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3008,
  "prerequisites": [
    3006,
    3007
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If both Nitric Acid and Ethenone are automated, then you can now get TNM effortlessly!\n\nIf you look at the recipe, you'll see that you need a lot more Nitric Acid than anything else. Given that Ammonia is the most power-hungry recipe, this is what will cut down into the fuel efficiency at the end, but not nearly enough to discourage the creation and use of CBD. Not only that, but if you check the uses of TNM, you'll see that you can treat Biodiesel the same way, although at a higher cost due to its lower fuel value, if you happened to have it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tetranitromethane as Additive",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3006,
    3007
  ],
  "rewards": [],
  "tasks": []
}
