tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__UltimateDistilla-AAAAAAAAAAAAAAAAAAAL0w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3027,
  "prerequisites": [
    3026
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Dangote Distillus is not enough for the goals of an oil baron. You might have heard about \"mega\" multiblocks, namely the Mega EBF, but did you know that a Distillation Tower equivalent exists?\n\nIt does the same thing as the Dangote, parallels, but it does 256 at a time, and is much, much bigger than anything you've built so far. My challenge to you is to build a max-height, full-sized Mega Distillation Tower, and come out of your efforts with the biggest multiblock that the pack has to offer. You will need more, much more casings than what the quest asks for, but your inventory is not big enough to hold the full amount that will need to build this monstrosity.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ultimate Distillation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "SECRET"
  },
  "required_prerequisites": [
    3026
  ],
  "rewards": [],
  "tasks": []
}
