tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__UsingAlltheFract-AAAAAAAAAAAAAAAAAAALuQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3001,
  "prerequisites": [
    2988
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After getting large amounts of all the oil fractions, what can you do with them? They'll pile up in the tanks or output hatches, and the Distillation Tower stops when it fills up, unless you enable fluid voiding in the controller - in which case everything that cannot be output will just be voided instead, and it's in your best interest to avoid this waste. What do, then?\n\nFirst off, it's important to note that almost everything you get from Oil can be processed into even more things. Whether or not the step is worthwhile is a different story altogether. That said, you're free to look through NEI or the spreadsheet to decide what you want to do, and how you want to do it. The charm of a processing chain like this is that it lets you choose your own path and gives you the information to know how to best utilize it.\n\nSecond off, Oil is a major source of byproducts, many of which are needed to create various important materials. However, this isn't the only way to obtain most of them, and you might already found other sources, especially if you've dabbled in the Benzene or the Biomass chains. Which path you take is up to you.\n\nNow, for the four fractions that you get from regular Oil. Up until now, the power generation needed both Light Fuel and Heavy Fuel processing, and Refinery Gas already proved to be a good source of Ethylene. What can these be used for, in case you can build more DTs to process the cracked fluids? Roughly speaking, these are the possibilities:\n\nLight Fuel: You will most likely be using most, or all of this to make Diesel. If you do have leftovers, moderately hydro-cracking it is a good source of Propene, and lightly hydro-cracking is the best source for Octane. These two are important, but only in EV, for epoxy and powergen, specifically.\n\nHeavy Fuel: If only working with regular Oil, a lot of this will also be consumed to make Diesel. However, it's important to get more of it automated, since it can be distilled directly to make three fantastic byproducts: Toluene, Phenol and Benzene. All of them are important for progression, so make sure you pay attention to this recipe. Toluene is especially useful in HV, as you will need many buckets of it when making your first rocket to be able to get into EV.\n\nNaphtha: You could distill it in a Distillation Tower, but keep in mind that you need to build a max-height one to cover the entire recipe. However, if you do it, you will have most of the Oil byproducts automated meaning that it's worth it to tackle this challenge when you get comfortable with making lots of Stainless Steel; it also has a good burn value, so if you don't need these byproducts, it's best to just use it for power.\n\nRefinery Gas: You're probably already distilling this for Ethylene. You could switch this recipe to a Distillation Tower and an Oil Cracking Unit (see next quest) to gain more output and some useful byproducts.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Using All the Fractions",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2988
  ],
  "rewards": [],
  "tasks": []
}
