tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__ZoomingwithNitro-AAAAAAAAAAAAAAAAAAALyA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3016,
  "prerequisites": [
    3012
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nitrous Oxide, N2O, also known as nitro. It makes cars go really fast for short bursts. In reality, it is a source of extra oxygen when mixed in with the fuel during combustion, allowing it to be consumed faster and also release energy faster, but at the risk of \"knocking\", detonating the fuel out of its intended boundaries and possibly destroying the engine.\n\nTo avoid this, something else needs to be mixed in this HOG to prevent your generators from exploding, right? Luckily for you, such an option exists and it will be presented after this quest. For now, though, you can focus on automating Nitrous Oxide by mixing Nitrogen with Oxygen. These are the two main products of distilling air, so you can obtain them in one step, but you probably have chosen your source of these gases at this point, so use what you have.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Zooming with Nitrous",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3012
  ],
  "rewards": [],
  "tasks": []
}
